Further eye gaze analysis

--- a/03eyegaze.Rmd
+++ b/03eyegaze.Rmd
@@ -84,11 +84,14 @@ These are our current AOIs.
 
 It's possible to do a secondary analysis combining some of these AOIs (in particular, maybe 5-6 and 7-8 can be combined into Torso Upper Half and Torso Lower Half). Anyway, the face AOIs are important, and the division of them into 4 areas is theoretically motivated and also previously seen in the literature. 
 
-*Why 4 AOIs on Face?* Emmorey et al. (2008) did this same setup. We generally know people fixate on the face across all conditions and langauge experiences, but **where** on the face is important for us to know. So these 4 AOIs. 
+*Why 4 AOIs on Face?* Emmorey et al. (2008) did this same setup. We generally know people fixate on the face across all conditions and langauge experiences, but **where** on the face is important for us to know. So these 4 AOIs. *Write one sentence here about predictions for language experience on face-looking.* 
 
-*Why 4 AOIs for Torso?* At the same time, all papers, tend to just classify the body as "body" with no further breakdown, or two-part breakdown. We know there is a lot of different things happening in that area for signers, too, plus we're lookina at CHILDREN with different language experiences, so they may be interested in different things than adults. So just makes sense to break down body into different regions. 
+*Why 4 AOIs for Torso?* Past papers tend to just classify the body as “body” with no further breakdown, or two-part breakdown.  In our study, we have higher resolution to break this down into four AOI’s, defined as upper chest, middle chest, lower chest, and belly.  We know that hands start and end at the belly and the hands spend the majority of the time in these four areas in front of the torso (and the hands spend very little time overlapping the face).  If an observer (child or adult) glances at the hands (or if the hands have any “gravity” upon gaze behavior), then gaze samples will fall within these four torso areas.  Although we expect that all observers do spend the most amount of time on the face, we also predict that the number of gazes towards the hands (by way of “torso”) might be impacted by language experience. *(make a footnote here:  As a future project, we will analyze the data using dynamic “hand” AOIs, for each hand, in which we document, on each frame, where the left and right hands are in viewing space.)*
 
-## Data Diagnosing 
+*Why 2 AOIs for left vs right?* People have talked how sign language impacts left vs right visual field asymmetries, as related to hemispheric laterality for language processing, so it is worth checking this.  If we do find an asymmetry, we will then just touch upon this literature in the discussion, but also acknowledge that it could be the signer’s hand dominance that drives a lateral asymmetry too, not just a hemispheric asymmetry.  Meaning, if the signer is right handed, her dominant hand might have some “gravity” in the viewer’s left visual field.  (And we can check this with the future analysis of dynamic hand AOIs.)
+
+
+# Data Diagnosing 
 This is my process of documenting how I'm weeding through data and making sure all's good. Let's visualize first of all. 
 ```{r}
 # Reduce dataset to face AOIs only
@@ -201,20 +204,210 @@ ggplot(data2, aes(x=aoi,y=percent)) +
   geom_boxplot() 
 ```
 
-
 # Big Five AOIs
 > You’ll have to decide how to put the AOIs in an ANOVA. All of them together is too many.  And you cannot put ALL the AOIs in. If they all sum to 100% (which they currently do), then the observations are not independent. Also, you can’t put AOIs that have near-zero values in with AOIs that have super high values, you’ll get whopping significance that is too obvious to reveal anything meaningful. 
 
-Based on the boxplot there are five AOIs that got hit the most: forehead, eyes, mouth, chin, and upperchest. 
+Based on the boxplot there are five AOIs that got hit the most: forehead, eyes, mouth, chin, and upperchest.
+**But this is really important...I think there is one or two outliers in forehead. And maybe it's bettet to get rid of forehead and upper chest for the big ANOVAs to keep things simple. Neither of them touch 50%. I am going ahead with all 5 though for now.** 
 
 *Important reference levels*
 - AOI reference level is eyes
 - MainGroup reference level is NativeDeaf
+
+Creating the `data.big5` thing here. 
+```{r}
+# Make Big5 df with reference levels
+data.big5 <- filter(data2,aoi == "forehead" | aoi == "eyes" 
+                    | aoi == "mouth" | aoi == "chin" | aoi == "upperchest") %>%
+  mutate(aoi = as.factor(aoi))
+data.big5$aoi <- factor(data.big5$aoi, levels=c("upperchest","chin","mouth","eyes","forehead"))
+data.big5$aoi <- relevel(data.big5$aoi, ref="eyes")
+data.big5$maingroup <- relevel(data.big5$maingroup, ref="NativeDeaf")
+```
+
  
-## Stats
+## ANOVAS
+
+Because we're doing ANOVAs, that means we need subject-level data, not trial-level data. Let's bump the `data.big5` up one level. 
+
+```{r}
+data.big5.item <- data.big5 # save item-level data for later
+
+# Pull out and save subject info
+data.big5.subjectinfo <- data.big5 %>%
+  select(-acc,-aoi,-percent,-video,-story) %>%
+  distinct()
+
+# Now collapse data.big5 to subject-level 
+data.big5 <- data.big5 %>%
+  group_by(participant,direction,aoi) %>%
+  summarize(percent = mean(percent,na.rm=TRUE))
+data.big5[data.big5=="NaN"] <- NA
+
+
+# Join subject info with data.big5 that's now subject-level
+data.big5 <- left_join(data.big5,data.big5.subjectinfo, by=c("participant","direction"))
+```
+
+## Groups Only
+Now we can do the ANOVAs. 
 
 > First, check the most important stats: Subject Groups, Video Condition, and some AOIs that are on the central body like: eyes, nose, mouth, neck, chest, below chest. You can combine some. If you see that no one ever looked at the forehead, you can dispense of that, and say that in the paper when you rationalize your AOIs used for stats. There might be a significant group main effect, OR a group main effect for reversed and not for forward, and furthermore, maybe only the late AoA groups show a reversal effect. 
 
+First let's do groups only (no continuous variables). First the viz, then the stats. 
+```{r}
+ggplot(data.big5) + 
+  geom_boxplot(aes(x=maingroup,y=percent,color=direction)) +
+  facet_wrap("aoi") + 
+  theme(axis.text.x=element_text(angle=45,hjust=1))
+```
+
+```{r}
+data.big5.viz <- data.big5 %>%
+  group_by(maingroup,direction,aoi) %>%
+  summarize(mean = mean(percent,na.rm=TRUE), sd = sd(percent,na.rm=TRUE))
+ggplot(data.big5.viz, aes(x=maingroup,y=mean,color=direction)) +
+  geom_point(position=position_dodge(0.5)) +
+  geom_errorbar(aes(ymin=mean-sd,ymax=mean+sd),width=0.1,position=position_dodge(0.5)) +
+  facet_wrap("aoi") +
+  theme(axis.text.x=element_text(angle=45,hjust=1))
+```
+
+Or a heat map! 
+
+```{r}
+data.big5.reduce <- data.big5 %>%
+  group_by(maingroup,aoi,direction) %>%
+  summarize(meanlooking = mean(percent, na.rm=TRUE)) %>%
+  ungroup() %>%
+  mutate(aoi = factor(aoi,levels=c("upperchest","chin","mouth","eyes","forehead")))
+ggplot(data.big5.reduce, aes(x = maingroup, y = aoi)) +
+  geom_tile(aes(fill=meanlooking),na.rm=TRUE) + 
+  scale_fill_gradient(low = "lightblue",high = "steelblue") +
+  facet_wrap("direction") +
+  theme(axis.text.x=element_text(angle=45,hjust=1))
+```
+
+The ANOVA below tells us there's a significant effect of AOI, and significant interactions of AOI x Direction and AOI x MainGroup. 
+```{r}
+group.anova <- aov(data=data.big5,percent ~ aoi * direction * maingroup)
+anova(group.anova)
+```
+Here's the posthoc (Tukey's HSD) for AOI, which tells us most AOIs are different from each other, except:
+1. chin vs. eyes
+1. forehead vs. upper chest
+
+Forget doing posthocs for all the interactions, way too many. 
+```{r}
+group.anova.posthoc <- TukeyHSD(group.anova,'aoi',conf.level = 0.95) 
+group.anova.posthoc
+```
+
+## Age of ASL Acquisition & Hearing Status ANOVA
+
+MainGroup is actually two different variables combined together: deaf and hearing, and native/early/late learners. What if we separated those out and regressed AoASL as a continuous variable, and added deaf/hearing as a factor. Again, first the viz, then the stats. 
+
+```{r fig.height=12, fig.width=12}
+# Draw it
+ggplot(data.big5, aes(x=aoasl,y=percent)) +
+  geom_point(aes(color=direction,shape=hearing)) +
+  geom_smooth(aes(color=direction,linetype=hearing),method="lm",se=FALSE) +
+  facet_wrap("aoi")
+```
+
+Let's move to ANOVAs. This is technically an ANCOVA, and AoASL is the covariate. The output tells us there is a significant main effect of AOI, and significant interactions of AOI x Direction and AOI x Hearing and AOI x Hearing X AoASL. So really it's very similar to what we got with the group ANOVA. 
+
+```{r}
+continuous.anova <- aov(data=data.big5, percent ~ aoi * direction * hearing * aoasl)
+anova(continuous.anova)
+```
+Maybe it's a problem that all the hearing people have late AoASL while most deaf have early AoASL. And I don't like the forehead outliers throwing off some of those lines from the graph above so that needs to be looked at. What if we tried sign-years instead of AoASL. 
+```{r fig.height=12, fig.width=12}
+ggplot(data.big5, aes(x=signyrs,y=percent)) +
+  geom_point(aes(color=direction,shape=hearing)) +
+  geom_smooth(aes(color=direction,linetype=hearing),method="lm",se=FALSE) +
+  facet_wrap("aoi")
+```
+
+Look interesting and you can sort of compare the deaf/hearing lines better, although we should get rid of that person who's been signing for 60 years if we do a years-of-signing analysis. Here's the ANCOVA. 
+
+Let's move to ANOVAs. This is technically an ANCOVA, and AoASL is the covariate. The output tells us there is a significant main effect of AOI, and significant interactions of AOI x Direction and AOI x Hearing and AOI x SignYrs. Again a rather similar thing result. 
+
+```{r}
+continuous.anova.sy <- aov(data=data.big5, percent ~ aoi * direction * hearing * signyrs)
+anova(continuous.anova.sy)
+```
+
+ 
+
+# Left/Right Analysis
+> Then, how about a section on Percent Looking for AOI’s examines whether there are side biases by doing an ANOVA with the entire Left vs Right side as 2 AOI levels, with Subject Groups, and Forward and Reversed.   If there are side biases, hopefully it is for the later AoA groups, then this means they are being drawn to the hands more than native signers.  It’s possible that this is driven by where the signer puts her dominant hand or by a hemispheric bias.  
+
+> Maybe even the native signers have a little side bias too for other reasons, but I doubt it.   This is kind of the hand-gravity idea, because there is nothing ever in the sides but arms and hands.
+ 
+> If nothing is significant with side biases, you still write all this up in a section in the paper and in the Discussion revisit that saying there were no side biases found.
+
+Let's go for it. Creating the `data.lr` thing here. And again because we're still doing ANOVAs and not hierarchical linear models we need to bump `data.lr` up one level. 
+```{r}
+# Make LR df with reference levels
+data.lr <- filter(data2,aoi == "left" | aoi == "right") %>%
+  mutate(aoi = as.factor(aoi))
+data.lr$maingroup <- relevel(data.lr$maingroup, ref="NativeDeaf")
+
+data.lr.item <- data.lr # save item-level data for later
+
+# Pull out and save subject info
+data.lr.subjectinfo <- data.lr %>%
+  select(-acc,-aoi,-percent,-video,-story) %>%
+  distinct()
+
+# Now collapse data.big5 to subject-level 
+data.lr <- data.lr %>%
+  group_by(participant,direction,aoi) %>%
+  summarize(percent = mean(percent,na.rm=TRUE))
+data.lr[data.lr=="NaN"] <- NA
+
+# Join subject info with data.big5 that's now subject-level
+data.lr <- left_join(data.lr,data.lr.subjectinfo, by=c("participant","direction"))
+```
+
+Problem is, I can already tell this dataset is rather sparse. There are `r sum(is.na(data.lr$percent))` empty cells out of `r nrow(data.lr)`. Soooo. Let's give this a shot anyway but probably not a good idea? The graph below, I changed the colors so they map on left/right AOI, and each facet is direction. So we can directly compare L/R biases.  
+```{r}
+ggplot(data.lr) + 
+  geom_boxplot(aes(x=maingroup,y=percent,fill=aoi)) +
+  facet_wrap("direction") + 
+  theme(axis.text.x=element_text(angle=45,hjust=1))
+```
+
+Let's try the group ANOVA and the AoASL ANCOVAs. Group ANOVA first...nothing significant here. 
+```{r}
+group.lranova <- aov(data=data.lr,percent ~ aoi * direction * maingroup)
+anova(group.lranova)
+```
+
+But the ANCOVA here shows some almost significant effects of hearing, and significant AOI:Hearing and AOASL:Hearing interactions.
+```{r}
+continuous.lranova <- aov(data=data.lr,percent ~ aoi * direction * aoasl * hearing)
+anova(continuous.lranova)
+```
+So that's interesting. Let's plot those out. Again, pay attention to the legend. And ahh, there's one huge outlier point with 0.30% (forward, right AOI, hearing person who learned ASL around age 12) which could be throwing off the entire stats too. Still, it's also interesting the deaf group has an increasing bias to the left the later they learn ASL. And I'm suspecting there is no general bias for hearing signers (once we fix that outlier). 
+```{r}
+ggplot(data.lr, aes(x=aoasl,y=percent)) +
+  geom_point(aes(color=aoi,shape=hearing)) +
+  geom_smooth(aes(color=aoi,linetype=hearing),method="lm",se=FALSE) +
+  facet_wrap("direction")
+```
+
+# Face AOI only Analysis (no Forehead, no Upper Chest)
+Should we do this?
+
+# More Analysis
+> Then when you do a multiple regression analysis, which will be looking at whether gaze behavior can be used to predict accuracy on lexical recall, this will have hearing status, AoA, lexical recall accuracy …. For reversed and not forward?
+You can’t put both in.  And a few of the AOI measures, maybe just one.  Maybe a looking-ratio.  Maybe a measure of scatter?  I don't know.  That's where viewing space comes in, and that's saved for later.  If we end up saving this for later, that's fine.    
+
+This will go into a separate data notebook (04). 
+
+# Assorted/older stuff pushed to the bottom. Code probably won't work.
 Let's jump straight to a big linear mixed model for the Big 5. We'll try both groups and regressing on AoA. Here are the ANOVA tables in order:
 1. Linear model (no random terms) with MainGroups
 1. Linear mixed model with MainGroups
@@ -222,12 +415,7 @@ Let's jump straight to a big linear mixed model for the Big 5. We'll try both gr
 1. Linear mixed model with AoASL and Hearing
 
 
-```{r}
-data.big5 <- filter(data2,aoi == "forehead" | aoi == "eyes" 
-                    | aoi == "mouth" | aoi == "chin" | aoi == "upperchest") %>%
-  mutate(aoi = as.factor(aoi))
-data.big5$aoi <- relevel(data.big5$aoi, ref="eyes")
-data.big5$maingroup <- relevel(data.big5$maingroup, ref="NativeDeaf")
+```{r, eval=FALSE, include=FALSE}
 model.group.lm <- lm(data = data.big5,percent ~ aoi * maingroup * direction)
 anova(model.group.lm)
 model.group.lmm <- lmer(data = data.big5,percent ~ aoi * maingroup * direction + 
@@ -242,7 +430,7 @@ anova(model.aoa.lmm)
 But that can be complicated because of so many possible interactions (groups x aois x direction x hearing) in the posthoc analyses. We'll try separating for direction. Because we think there is no difference among groups for forward, but there should be for reverse. 
 
 
-```{r}
+```{r, eval=FALSE, include=FALSE}
 data.big5.fw <- filter(data.big5,direction=="forward")
 data.big5.rv <- filter(data.big5,direction=="reversed")
 model.group.fw <- lmer(data = data.big5.fw,percent ~ aoi * maingroup  + 
@@ -254,7 +442,7 @@ anova(model.group.rv)
 ```
 
 What if we use AoA as linear and then deaf/hearing
-```{r}
+```{r, eval=FALSE, include=FALSE}
 model.group.fw <- lmer(data = data.big5.fw,percent ~ aoi * aoasl * hearing  + 
                       (1|participant) + (1|story))
 anova(model.group.fw)
@@ -263,51 +451,5 @@ model.group.rv <- lmer(data = data.big5.rv,percent ~ aoi * aoasl * hearing  +
 anova(model.group.rv)
 ```
 
-## Visualizations
-Getting a bit confused, yeah...let's plot these out (which I should have done before diving into stats tests).
- 
-```{r}
-ggplot(data.big5) + 
-  geom_boxplot(aes(x=maingroup,y=percent,color=direction)) +
-  facet_wrap("aoi") + 
-  theme(axis.text.x=element_text(angle=45,hjust=1))
-```
-Or a heat map! This can be pretty useful.  This one is both forward/reverse
-```{r}
-data.big5.reduce <- data.big5 %>%
-  group_by(maingroup,aoi) %>%
-  summarize(meanlooking = mean(percent, na.rm=TRUE))
-ggplot(data.big5.reduce, aes(x = maingroup, y = aoi)) +
-  geom_tile(aes(fill=meanlooking),na.rm=TRUE) + 
-  scale_fill_gradient(low = "lightblue",high = "steelblue") 
-```
-Let's divide by direction...
-```{r}
-data.big5.reduce <- data.big5 %>%
-  group_by(maingroup,aoi,direction) %>%
-  summarize(meanlooking = mean(percent, na.rm=TRUE)) %>%
-  ungroup() %>%
-  mutate(aoi = factor(aoi,levels=c("upperchest","chin","mouth","eyes","forehead")))
-ggplot(data.big5.reduce, aes(x = maingroup, y = aoi)) +
-  geom_tile(aes(fill=meanlooking),na.rm=TRUE) + 
-  scale_fill_gradient(low = "lightblue",high = "steelblue") +
-  facet_wrap("direction") +
-  theme(axis.text.x=element_text(angle=45,hjust=1))
-```
 
-That's cool. We can work on this. But what I REALLY wanted to do next was to do line plots, with lines for direction AND deafness, and x-axis being AOA and y-axis being percent looking. And the facet would be AOI. That can work. Let me try this. Well, it's not exactly right. First thing in the morning. 
-
-```{r}
-ggplot(data.big5, aes(x=aoasl,y=percent)) +
-  geom_point(aes(color=direction)) +
-  geom_line(aes(color=direction)) + 
-  facet_grid(aoi ~ hearing)
-```
-> Then, how about a section on Percent Looking for AOI’s examines whether there are side biases by doing an ANOVA with the entire Left vs Right side as 2 AOI levels, with Subject Groups, and Forward and Reversed.   If there are side biases, hopefully it is for the later AoA groups, then this means they are being drawn to the hands more than native signers.  It’s possible that this is driven by where the signer puts her dominant hand or by a hemispheric bias.  
- 
-> Maybe even the native signers have a little side bias too for other reasons, but I doubt it.   This is kind of the hand-gravity idea, because there is nothing ever in the sides but arms and hands.
- 
-> If nothing is significant with side biases, you still write all this up in a section in the paper and in the Discussion revisit that saying there were no side biases found.
- 
-> Then when you do a multiple regression analysis, which will be looking at whether gaze behavior can be used to predict accuracy on lexical recall, this will have hearing status, AoA, lexical recall accuracy …. For reversed and not forward?   You can’t put both in.  And a few of the AOI measures, maybe just one.  Maybe a looking-ratio.  Maybe a measure of scatter?  I don't know.  That's where viewing space comes in, and that's saved for later.  If we end up saving this for later, that's fine.    
 
