--- a/02lexicalrecall.Rmd
+++ b/02lexicalrecall.Rmd
@@ -69,7 +69,7 @@ data <- data %>%
 ```
 
 
-# Analysis by Groups
+# ANOVAS
 Lexical recall accuracy violins and error bar charts for forward vs. backward stories. 
 ```{r}
 # Summarizing means and SDs
@@ -95,19 +95,22 @@ ggplot(accdata,aes(maingroup,acc.mean,color=direction)) +
 
 ```
 
+# Group ANOVA
 Let's test for statistical significance. A simple ANOVA tell us there is a main effect of group and direction, but no interactions. 
 ```{r}
 # Let's set Native Deaf as the reference level to compare all other
 data$maingroup <- relevel(data$maingroup, ref="NativeDeaf")
 # Run the ANOVA
 acc.anova <- aov(data=data,acc ~ maingroup*direction)
-kable(tidy(acc.anova), digits=3) %>% kable_styling(bootstrap_options = c("striped", "hover", "condensed"))
+anova(acc.anova)
+# kable(tidy(acc.anova), digits=3) %>% kable_styling(bootstrap_options = c("striped", "hover", "condensed"))
 ```
 Tukey's HSD posthoc tells us that Hearing Novice ASL is significantly different from Deaf Native.  
 ```{r}
 # Run the posthoc on main group
 acc.posthoc <- TukeyHSD(acc.anova,'maingroup',conf.level = 0.95) 
-kable(tidy(acc.posthoc), digits=3) %>% kable_styling(bootstrap_options = c("striped", "hover", "condensed"))
+acc.posthoc
+#kable(tidy(acc.posthoc), digits=3) %>% kable_styling(bootstrap_options = c("striped", "hover", "condensed"))
 ```
 
 Group coefficients are here. Remember our reference level ("control") is Native Deaf. Their forward accuracy is 85% with a reversal effect of -9%.  ASL, Forward. Mean accuracy for that is 84%, and its reversal effect is -14%. All the other values are to be added to these coefficients. Hearing Novice ASL's forward accuracy was 78%, with a reversal effect of -6%! 
@@ -116,8 +119,24 @@ Group coefficients are here. Remember our reference level ("control") is Native 
 kable(tidy(acc.anova$coefficients), digits=3) %>% kable_styling(bootstrap_options = c("striped", "hover", "condensed"))
 ```
 
-In summary, ANOVA tells us there are main effects of group and direction, no interactions. All of which is a good thing. But I'm curious if there's any item-level effects we should be watching out for. Because there are 4 different stories. Let's plot those out.
+# AoASL & Hearing ANCOVA
+Let's try ANCOVAs where we include AoASL and hearing status as predictors too - so now we're not using MainGroups anymore. But we do have the AoASL-hearing collinearity problem. So. Let's try it anyway. Plot first.
 
+```{r}
+ggplot(data, aes(x=aoasl,y=acc)) +
+  geom_point(aes(color=direction,shape=hearing)) +
+  geom_smooth(aes(color=direction,linetype=hearing),method="lm",se=FALSE)
+```
+And now the ANCOVA. I'm a bit surprised we're not getting a direction:AoASL:hearing interaction because definitely we can see within the deaf group, there is a reversal effect correlated with AoASL. Maybe it's because of the collinearity. 
+```{r}
+acc.ancova <- aov(data=data,acc ~ direction * aoasl * hearing)
+anova(acc.ancova)
+```
+
+In summary, ANOVA tells us there are main effects of group and direction, no interactions. The ANCOVA tells us we have a main effect of direction and AoASL, but not of hearing. All interesting. 
+
+# Item-Level Modeling
+I'm curious if there's any item-level effects we should be watching out for. Because there are 4 different stories. Let's plot those out.
 ```{r}
 # Run summary stats grouped by story, too
 accdata2 <- data %>%
@@ -139,7 +158,9 @@ ggplot(accdata2,aes(maingroup,acc.mean,color=direction)) +
   theme(axis.text.x=element_text(angle=45,hjust=1))
 ```
 
-Boy! Seems King Midas had a strong reversal effect, while Red Riding Hood had a weak reversal effect. Maybe we should put those in as random effects variables in a mixed model, along with participants too. With mixed models, you define predictor variables (what we're interested in; aka, fixed effects) and grouping (what we're not interested in, aka, random effects). This is overkill for simple accuracy data but this will help set us up for eye tracking analysis and **importantly reviewers may ask us about item-level effects given we have just 4 stories.**
+Boy! Seems King Midas had a stronger reversal effect, while Red Riding Hood had a weaker reversal effect. 
+
+Maybe we should put those in as random effects variables in a mixed model, along with participants too. With mixed models, you define predictor variables (what we're interested in; aka, fixed effects) and grouping (what we're not interested in, aka, random effects). This is overkill for simple accuracy data but this will help set us up for eye tracking analysis and **importantly reviewers may ask us about item-level effects given we have just 4 stories.**
 
 So here, we have fixed effects of group and direction, and random effects of story and id, with varying slopes for direction.
 
@@ -153,6 +174,7 @@ Here are the coefficients in a nicer format.
 kable(xtable(coef(summary(acc.lm))), digits=3) %>% kable_styling(bootstrap_options = c("striped", "hover", "condensed"))
 ```
 
+# Group1/Group2 Differences?
 One more thing I just remembered. What if a reviewer asks if Group 1 differed from Group 2 (in other words, was there an effect of stimulus order)? Easy to do now that our data is nicely organized (or "tidy"). 
 ```{r}
 acc.lm.order <- lm(data=data, acc ~ videogroup)
@@ -169,16 +191,14 @@ ggplot(data, aes(x=videogroup, y=acc, fill=videogroup)) +
 
 So Group 1 has a lot more bad test results compared to Group 2. But maybe that's a good reason to be using mixed models, and we can account for that by allowing subjects and items (and item order, by definition...I think) to vary randomly. 
 
-# AOA Modeling
-Below are models for AOA...I need to look at forward/reversed together and reversed only.
 ```{r}
-ggplot(filter(data,direction=="reversed"),aes(x=aoasl,y=acc)) +
-  geom_point() +
-  geom_smooth(method="lm")
+# ggplot(filter(data,direction=="reversed"),aes(x=aoasl,y=acc)) +
+#   geom_point() +
+#   geom_smooth(method="lm")
 ```
 ```{r}
-aoa.model <- lm(acc ~ aoasl, data=filter(data,direction=="reversed"))
-summary(aoa.model)
+# aoa.model <- lm(acc ~ aoasl, data=filter(data,direction=="reversed"))
+# summary(aoa.model)
 ```
 
 
